fixed invisible search bar

--- a/app/assets/stylesheets/new_styles.scss
+++ b/app/assets/stylesheets/new_styles.scss
@@ -1107,6 +1107,10 @@ h4 {
   border: none; 
 }
 
+.form-control::-webkit-input-placeholder{
+  color: white;
+}
+
 #search_box{
   border-radius: 50px; 
   border: none; 
@@ -1433,4 +1437,5 @@ h4 small, h4 .small, .h4 small, .h4 .small, h5 small, h5 .small, .h5 small, .h5 
 .alert-warning {
   border-color: #737e92;
   background-color: #737e92;
+  color: white;
 }
